--- a/Урок 1. Конструкторы и прототипы/03_Prototype/003_Rectangle.html
+++ b/Урок 1. Конструкторы и прототипы/03_Prototype/003_Rectangle.html
@@ -29,8 +29,8 @@
 
         // При попытке смены значения, которое было унаследовано от прототипа, в объекте будет создана копия свойства (свойство прототипа не изменится). 
         // Значение в прототипе может быть измененно только черзе операцию Rectangle.prototype.name
-        //rect1.name = "first rectangle";
-        Rectangle.prototype.name = "first rectangle";
+        rect1.name = "first rectangle";
+        //Rectangle.prototype.name = "first rectangle";
 
         document.write("После смены имени объекта rect1<br/>")
         document.write("Имя прямоугольника 1 " + rect1.name + "<br />");
