--- a/HomeWork/1/1.2.2.html
+++ b/HomeWork/1/1.2.2.html
@@ -2,9 +2,151 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Задание 1.2</title>
+
 </head>
 <body>
+<p>
+<h3>Задание 2</h3>
 
+<p>
+    Разработайте функцию-конструктор,
+    которая будет создавать объект Human(человек)
+    создайте массив объектов и реализуйте функцию,
+    которая будет сортировать элементы массива по значению
+    свойства Age по возрастанию или по убыванию.
+</p>
+
+</p>
+<script> "use strict"
+/*
+ * Вспомогательная функция вывода на экран.
+ * Обворачивает переданные даные в переданный HTML тег
+ * */
+function echo(tag, string) {
+    // Инициализируем переменные
+    var tagOpen, tagClose;
+    switch (tag) { // Быбор зажанного html тега
+
+        case "p":
+        {
+            tagOpen = '<p>';
+            tagClose = '</p>';
+        }
+            break;
+
+        case "br":
+        {
+            tagOpen = '<br>';
+            tagClose = '';
+        }
+            break;
+        case "pre":
+        {
+            tagOpen = '<pre>';
+            tagClose = '</pre>';
+        }
+            break;
+//        default:
+//        {}break;
+    }
+
+    document.write(tagOpen + string + tagClose);
+}
+
+var Human = function (index) {
+
+    // Свойства
+    this.index = index; // Индекс в массиве при создании
+    this.name = 'Имя не задано';
+    this.age = 'Возраст не задан';
+
+    // Методы
+    Human.newObj = function () { // Метод создания обьекта
+        return new constHuman();
+    }
+}
+
+var Humans = new Array();
+var humasNames =
+        [
+            'Виктор',
+            'Иван',
+            'Борис',
+            'Олег',
+            'Николай'
+        ];
+var minAge = 21, maxAge = 55;
+
+for (var i = 0; i < humasNames.length; i++) {
+    Humans[i] = new Human('Текущий индекс = ' + i);
+    Humans[i].name = humasNames[i];
+    Humans[i].age = Math.floor(Math.random() * (maxAge - minAge) + minAge);
+
+}
+
+echo('p', 'Вывод свойст обьектов в массиве. Свойство объектов, age генирируется при запуске сценария. ');// Вывод исходного массива
+Humans.forEach(function (item, i, Humans) {
+    echo('pre', i + ' | ' + item.name + ' | ' + item.age);
+});
+// Сортируме масссив с объектами
+var sortHumanToAge = sortArrayToProperty(Humans,'d');
+
+// Вывод отсортированого массива, по свойству age
+echo('br', 'Вывод отсортированого, по свойству age, массива объектов.');
+
+echoArrayOfObjects(sortHumanToAge);
+
+
+
+// --------------------------------------------------------- Функции ------------------------------------
+
+function echoArrayOfObjects(Array){
+    Array.forEach(function (item, i, Humans) {
+        echo('pre', i + ' | ' + item.name + ' | ' + item.age);
+    });
+}
+
+// Функция сортировки массива обьектов по свойству
+function sortArrayToProperty(arrayOfObjects, order) {
+    /*
+     * Order:
+     *   Descending - по убыванию - 'd'
+     *   Ascending - по возрастанию - 'a'
+     * */
+    var order = order;
+    var size = arrayOfObjects.length;
+
+    for (var i = 0; i < size; ++i) // i - номер текущего шага
+    {
+
+        var pos = i;
+        var tmp = arrayOfObjects[i];
+        for (var j = i + 1; j < size; ++j) // цикл выбора наименьшего элемента
+        {
+
+
+//            if (order == 'd' || order == 'D') {
+//                if (arrayOfObjects[j].age > tmp.age) {
+//                    pos = j;
+//                    tmp = arrayOfObjects[j];
+//                }
+//            } else if (order == 'a' || order == 'A') {
+//                if (arrayOfObjects[j].age < tmp.age) {
+//                    pos = j;
+//                    tmp = arrayOfObjects[j];
+//                }
+
+            arrayOfObjects[pos] = arrayOfObjects[i];
+            arrayOfObjects[i] = tmp; // меняем местами наименьший с a[i]
+        }
+
+    }
+    return arrayOfObjects;
+}
+
+
+
+</script>
 </body>
 </html>
