--- a/HomeWork/1/1.3.html
+++ b/HomeWork/1/1.3.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Задание 1.3</title>
 </head>
 <body>
+<h3>Задание 3</h3>
 
+<p>
+    Разработайте функцию-конструктор,
+    которая будет создавать объект Human(человек)
+    добавьте на свое усмотрение свойства и методы в этот объект.
+    Подумайте какие методы и свойства следует сделать уровня экземпляра,
+    а какие уровня функции-конструктора.
+</p>
 </body>
 </html>
