--- a/Урок 2. Работа с документами/03_Document/005_getElementsByName.html
+++ b/Урок 2. Работа с документами/03_Document/005_getElementsByName.html
@@ -14,7 +14,8 @@
 
                 var res = "";
                 for (var i = 0; i < radioButtons.length; i++) {
-                    res += radioButtons[i].value + " " + radioButtons[i].checked + "\r\n";
+                    res += radioButtons[i].value + " "
+                    + radioButtons[i].checked + "\r\n";
                 }
                 alert(res);
             }
