--- a/Урок 2. Работа с документами/04_DOM/005_nextSibling.html
+++ b/Урок 2. Работа с документами/04_DOM/005_nextSibling.html
@@ -6,10 +6,10 @@
     <script type="text/javascript">
         window.onload = function () {
 
-            var e = document.getElementsByTagName("li")[2];
+            var e = document.getElementsByTagName("li")[3];
 
             // nextSibling - получение следующего узла, который находиться на одном уровне с текущим (узлы имеют общий родительский узел)
-            e.nextSibling.style.color = "red";
+            e.nextSibling.style.color = "red"; // следующий соседний
 
             // previousSibling - получение предыдущего узла, который находиться на одном уровне с текущим.
             e.previousSibling.style.color = "green";
