--- a/Урок 2. Работа с документами/04_DOM/007_DOM_Attributes.html
+++ b/Урок 2. Работа с документами/04_DOM/007_DOM_Attributes.html
@@ -16,6 +16,12 @@
 
             // чтение атрибута
             alert(a3.getAttribute("href"));
+
+            /* ClassWork */
+            var a4 = document.getElementById('a4');
+            a4.setAttribute('href','/dir/sir/elton/john');
+            alert(a4.getAttribute('href'));
+
         }
     </script>
 </head>
@@ -23,5 +29,6 @@
     <a id="a1">Text a1</a>
     <a id="a2" href="http://edu.cbsystematics.com">Text a2</a>
     <a id="a3" href="http://edu.cbsystematics.com">Text a3</a>
+    <a id="a4">Text A4</a>
 </body>
 </html>
