--- a/Урок 2. Работа с документами/03_Document/003_getElementById.html
+++ b/Урок 2. Работа с документами/03_Document/003_getElementById.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>getElementById</title>
+    script
 </head>
 <body>
     <p id="output">Hello world</p>
@@ -12,6 +13,9 @@
         // получение элемента со страницы по значению атрибута id
         var paragraph = document.getElementById("output");
         var hyperlink = document.getElementById("link");
+
+
+
 
         // innerHTML - текст между открывающим и закрывающим тегами.
         paragraph.innerHTML = "HELLO WORLD !!!";
