--- a/Урок 2. Работа с документами/04_DOM/001_childNodes.html
+++ b/Урок 2. Работа с документами/04_DOM/001_childNodes.html
@@ -1,5 +1,4 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Работа с узлами DOM - Свойства</title>
 
