--- a/Урок 2. Работа с документами/04_DOM/004_childs.html
+++ b/Урок 2. Работа с документами/04_DOM/004_childs.html
@@ -17,9 +17,6 @@
     </script>
 </head>
 <body>
-    <ul id="list">
-        <li>Item 1</li><li>Item 2</li><li>Item 3</li>
-
-    </ul>
+    <ul id="list"><li>Item 1</li><li>Item 2</li><li>Item 3</li></ul>
 </body>
 </html>
