--- a/Урок 2. Работа с документами/04_DOM/006_DOM_Methods.html
+++ b/Урок 2. Работа с документами/04_DOM/006_DOM_Methods.html
@@ -31,7 +31,9 @@
             var h3 = document.createElement('h3');
             h3.innerHTML = 'Вствка h3 по средствам ' +
                     'JavaScript, перед #div2';
-            document.body.insertBefore(h3,div2)
+            document.body.insertBefore(h3,div2);
+
+            document.body.insertAfter(h3,div2)
 
 
 
