--- a/Урок 2. Работа с документами/03_Document/006_getElementsByTagName.html
+++ b/Урок 2. Работа с документами/03_Document/006_getElementsByTagName.html
@@ -31,6 +31,11 @@
     <p>Hello world!!!</p>
 
 
-    <h4>Lorem 1</h4><h4>Lorem 2</h4><h4>Lorem 3</h4><h4>Lorem 4</h4><h4>Lorem 5</h4><h4>Lorem 6</h4>
+    <h4>Lorem 1</h4>
+    <h4>Lorem 2</h4>
+    <h4>Lorem 3</h4>
+    <h4>Lorem 4</h4>
+    <h4>Lorem 5</h4>
+    <h4>Lorem 6</h4>
 </body>
 </html>
