HW #2.3 Ivan tupit 4

--- a/HomeWork/2/2.2.html
+++ b/HomeWork/2/2.2.html
@@ -20,14 +20,14 @@
                 div.appendChild(item);
             } else {
                 i = 0;
-                do {
-                    var list = document.getElementById("div");
+                var list = document.getElementById("div");
+                while (list.lastChild != null)
+                {
                     var item = list.lastChild;
 
                     // удаление выбранного элемента из дерева.
                     list.removeChild(item);
-
-                } while (list.lastChild != null)
+                }
             }
         }
 
