--- a/Урок 3. Window. Регулярные выражения/05_String/001_StringObject.htm
+++ b/Урок 3. Window. Регулярные выражения/05_String/001_StringObject.htm
@@ -12,7 +12,7 @@
 
         // указание юникод символов явным образом.
         var str = "\u1234";
-        document.write(str);
+        document.write(str + ' | ');
 
         document.write("typeof объекта, созданного через значение, взятое в двойные кавычки - " + typeof a);
         document.write("<br />");
