HW #2.3 Ivan tupit

--- a/HomeWork/4/4.4.html
+++ b/HomeWork/4/4.4.html
@@ -14,11 +14,7 @@
     <input type="button" id="left">
 </div>
 
-<div class="btn-group">
-
-
-</div>
-
+<div class="btn-group"></div>
 
 <script src="4.4.js"></script>
 </body>
