--- a/Урок 4. CSS и JavaScript/03_DHTML/004_ComputedStyles.html
+++ b/Урок 4. CSS и JavaScript/03_DHTML/004_ComputedStyles.html
@@ -10,7 +10,7 @@
         }
 
             div#first {
-                background-color: green;
+                background-color: #c3fa85;
             }
     </style>
 
