--- a/HomeWork/4/4.4.html
+++ b/HomeWork/4/4.4.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="4.4.css">
 </head>
 <body>
+<div id="block2">
+  Передвигайте объект с помощью клавиатуры
+</div>
+
 
 <div class="block" id="block1">
-    <input type="button" id="top">
+    <input type="button" id="top">a
     <input type="button" id="right">
     <input type="button" id="bottom">
     <input type="button" id="left">
