--- a/Урок 5. События и обработка событий (Часть 1)/02_DOM_Level_2/003_EventRouts.html
+++ b/Урок 5. События и обработка событий (Часть 1)/02_DOM_Level_2/003_EventRouts.html
@@ -14,7 +14,7 @@
         // true - обработать событие на этапе ПЕРЕХВАТА
         // false - обработать событие на этапе ВСПЛЫВАНИЕ
         
-        var isTunnel = false;
+        var isTunnel = true;
 
         window.onload = function () {
             var e1 = document.getElementById("first");
