--- a/HomeWork/4/4.2.html
+++ b/HomeWork/4/4.2.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 
-<form action="login.html" id="loginform">
-    <input class="inputs" type="text" id="login" placeholder="Login">
-    <input class="inputs" id="password" type="password" placeholder="Password">
-  <input type="submit" id="submit" value="Отправить">
-</form>
+<div id="loginform">
 
-<!--<div id="t">fgjdfjj</div>-->
+    <div id="messages"></div>
+
+    <form action="login.html" >
+        <input class="inputs" type="text" id="login" placeholder="Login">
+        <input class="inputs" id="password" type="password" placeholder="Password">
+        <input type="submit" id="submit" value="Отправить">
+    </form>
+
+</div>
 
 <script src="4.2.js"></script>
 </body>
