--- a/HomeWork/4/4.2.html
+++ b/HomeWork/4/4.2.html
@@ -14,7 +14,7 @@
     <form action="login.html" >
         <input class="inputs" type="text" id="login" placeholder="Login">
         <input class="inputs" id="password" type="password" placeholder="Password">
-        <input type="submit" id="submit" value="Отправить">
+        <input type="submit" class="btn login" id="submit" value="Отправить">
     </form>
 
 </div>
