--- a/Урок 6. События и обработка событий (Часть 2)/01_Event/003_MouseEventInterface_DOM.htm
+++ b/Урок 6. События и обработка событий (Часть 2)/01_Event/003_MouseEventInterface_DOM.htm
@@ -7,8 +7,12 @@
     <style type="text/css">
         div {
             background-color: #ceffff;
+            margin-left: calc(50% - 50px);
             height: 100px;
             width: 100px;
+        }
+        #output{
+            margin-left: calc(50% - 50px);
         }
     </style>
 
