--- a/Урок 7. Формы и элементы форм/01_Form/001_FormObject.html
+++ b/Урок 7. Формы и элементы форм/01_Form/001_FormObject.html
@@ -6,9 +6,9 @@
         window.onload = function () {
             var f = document.forms[0]; // получение первой формы на странице.
             
-            f.elements[0].value = "text"; // изменение первого по счету поля ввода в форме.
-            f.elements[1].value = "text";
-            f.elements[2].value = "text";
+            f.elements[0].value = "Элемент 1 "; // изменение первого по счету поля ввода в форме.
+            f.elements[1].value = "Элемент 2";
+            f.elements[2].value = "Элемент 3";
         }
     </script>
 </head>
