--- a/HomeWork/6/6.1.html
+++ b/HomeWork/6/6.1.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-   
+    <link rel="stylesheet" href="6.1.css">
+    <script src="6.1.js"></script>
   </head>
   <body>
 
-  <form action="">
+  <form action="" id="text-form">
     <textarea placeholder="Введите текст здесь"></textarea>
-    <input type="submit" value="Сохранить">
+    <input id="save-button" type="submit" value="Сохранить">
   </form>
+  <div id="output"></div>
 
   
   </body>
